@@ -2,7 +2,7 @@
 if (!defined('TYPO3_MODE')) die ('Access denied.');
 
 if (TYPO3_MODE == 'BE') {
-	$reports = array('eid', 'clikeys', 'plugins', 'xclass', 'hooks', 'status', 'ajax', 'extensions', 'logerrors');
+	$reports = array('eid', 'clikeys', 'plugins', 'xclass', 'hooks', 'status', 'ajax', 'extensions', 'logerrors', 'websitesconf');
 
 	if (t3lib_extMgm::isLoaded('realurl')) {
 		$reports [] = 'realurlerrors';
